rework a bunch fo the genmeta stuff to work via Vertex/Bedrock; resolve conflicts from main